--- a/scss/secciones/_main.scss
+++ b/scss/secciones/_main.scss
@@ -6,7 +6,7 @@
         height: 400px;
     }
     .tamaño_foto{
-        width: 40vw;
+        width: 60vw;
     }
     .boton-color{
         background-color: rgb(242, 8, 191);
@@ -19,5 +19,8 @@
     }
     .colorBoton{
         background-color: rgb(242, 8, 191);
+    }
+    span{
+        color: rgb(242, 8, 191);
     }
 }
