--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,9 @@ nav {
 .main {
   background-color: black;
   color: white;
-  padding-top: 150px; }
+  padding-top: 150px;
+  padding-left: 20px;
+  padding-right: 20px; }
   .main img {
     height: 400px; }
   .main .tamaño_foto {
@@ -34,9 +36,16 @@ nav {
     color: #f208bf; }
   .main h2 {
     color: #f208bf; }
+  .main h3 {
+    color: #f208bf; }
   .main .colorBoton {
     background-color: #f208bf; }
   .main span {
+    color: #f208bf; }
+  .main .carousel-padre {
+    width: 50vw;
+    margin: 0 auto; }
+  .main form {
     color: #f208bf; }
 
 /* FOOTER */
