--- a/scss/secciones/_main.scss
+++ b/scss/secciones/_main.scss
@@ -2,6 +2,8 @@
     background-color: black;
     color: white;
     padding-top: 150px;
+    padding-left: 20px;
+    padding-right: 20px;
     img{
         height: 400px;
     }
@@ -17,10 +19,20 @@
     h2{
         color: rgb(242, 8, 191);
     }
+    h3{
+        color: rgb(242, 8, 191);
+    }
     .colorBoton{
         background-color: rgb(242, 8, 191);
     }
     span{
+        color: rgb(242, 8, 191);
+    }
+    .carousel-padre{
+        width: 50vw;
+        margin: 0 auto;
+    }
+    form{
         color: rgb(242, 8, 191);
     }
 }
