agregué carpeta de variables

--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -1,5 +1,5 @@
 footer{
-    background-color:rgb(242, 8, 191);
+    background-color:$magenta;
     .text-muted{
         color: #141619!important;
     }
