--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ nav {
   padding-left: 20px;
   padding-right: 20px; }
   .main img {
-    height: 400px; }
+    height: 30vw; }
   .main .tamaño_foto {
     width: 60vw; }
   .main .boton-color {
