--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,9 @@
     background-color: black;
 }
 
+// VARIABLES
+@import './variables/variables';
+
 /* HEADER/NAVBAR */
 @import './secciones/navbar';
 
