--- a/scss/secciones/_main.scss
+++ b/scss/secciones/_main.scss
@@ -5,34 +5,36 @@
     padding-left: 20px;
     padding-right: 20px;
     img{
-        height: 400px;
+        height: 30vw;
     }
     .tamaño_foto{
         width: 60vw;
     }
     .boton-color{
-        background-color: rgb(242, 8, 191);
+        background-color: $magenta;
     }
     h1{
-        color: rgb(242, 8, 191);
+        color: $magenta;
     }
     h2{
-        color: rgb(242, 8, 191);
+        color: $magenta;
     }
     h3{
-        color: rgb(242, 8, 191);
+        color: $magenta;
     }
     .colorBoton{
-        background-color: rgb(242, 8, 191);
+        background-color: $magenta;
     }
     span{
-        color: rgb(242, 8, 191);
+        color: $magenta;
     }
     .carousel-padre{
         width: 50vw;
         margin: 0 auto;
     }
     form{
-        color: rgb(242, 8, 191);
+        color: $magenta;
     }
 }
+
+
