--- a/scss/secciones/_navbar.scss
+++ b/scss/secciones/_navbar.scss
@@ -1,5 +1,5 @@
 nav{
-    background-color:rgb(242, 8, 191);
+    background-color: $magenta;
     .navbar-brand img{
         width: 90px;
         height: 90px;
