--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,12 @@
   padding: 0;
   box-sizing: border-box; }
 
+body {
+  min-height: 80vh; }
+
 .bc {
-  background-color: black; }
+  background-color: black;
+  min-height: 75vh; }
 
 /* HEADER/NAVBAR */
 nav {
