--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,9 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+ body{
+    min-height: 80vh;   
+ }
 .bc{
     background-color: black;
+    min-height: 75vh;
 }
 
 // VARIABLES
