--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,12 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
- body{
-    min-height: 80vh;   
- }
+
 .bc{
     background-color: black;
-    min-height: 75vh;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 // VARIABLES
