--- a/scss/secciones/_main.scss
+++ b/scss/secciones/_main.scss
@@ -4,6 +4,8 @@
     padding-top: 150px;
     padding-left: 20px;
     padding-right: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
     img{
         height: 30vw;
     }
@@ -35,6 +37,30 @@
     form{
         color: $magenta;
     }
+    button:hover{
+        color: black;
+        font-size: large;
+    }
+    .fotos12{
+        display: flex;
+        justify-content: space-around;
+        width: 1fr;
+        height: 1fr;
+        margin: 1rem;
+    }
+    .foto1{
+        margin-left: 1rem;
+        width: 30vw;
+    }
+    .foto2{
+        margin-left: 1rem;
+        width: 30vw;
+    }
+    .textodeimg{
+        display: flex;
+        justify-content: center;
+    }
+    
 }
 
 
